--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.35", features = ["derive", "error-context"] }
+serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
+serde_json = "1.0.140"
